add_library(asio_pq
	cancel.cpp
	connection.cpp
	detail/socket.cpp
	error.cpp
	result.cpp
)
target_include_directories(asio_pq
	PUBLIC
		${CMAKE_CURRENT_SOURCE_DIR}/include
)
target_link_libraries(asio_pq
	PUBLIC
		Asio
		Beast
		Boost::boost
		Boost::system
		MParkVariant
		PostgreSQL
)
add_subdirectory(tests)
